entity_macros/tests/ui/attribute/core-field-id-already-marked.stderr
error: Cannot mark an id field if including ent core
 --> $DIR/core-field-id-already-marked.rs:6:5
  |
6 |     #[ent(id)]
  |     ^

warning: unused import: `Id`
 --> $DIR/core-field-id-already-marked.rs:1:37
  |
1 | use entity::{include_ent_core, Ent, Id};
  |                                     ^^
  |
  = note: `#[warn(unused_imports)]` on by default
